objects/Bug__c.object
<CustomObject>
    <description>Bugs related to Service cases and integrate with the bug tracking system</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Case__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affects_Version__c</fullName>
        <label>Affects Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipated_Due_Date__c</fullName>
        <label>Anticipated Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bug_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this box is checked, it means that there are Bug related attachments in Chatter on the Bug record.</description>
        <inlineHelpText>When this box is checked, it means that there are Bug related attachments in Chatter on the Bug record.</inlineHelpText>
        <label>Bug Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bug_Integration_Id__c</fullName>
        <description>The Correlation Id received from a successful bug submission.</description>
        <label>Bug Integration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bug_Number__c</fullName>
        <label>Bug Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bug_Process_Status__c</fullName>
        <description>status within the process of submitting and resolving a bug.  Managed by process builder.</description>
        <inlineHelpText>This shows what status the bug is in regards to the process of submission and resolution. 
Created - created in SF but not sent to JIRA
Submitted - sent to JIRA, no response from development
Updated by Development - updated
Closed - issue is complete</inlineHelpText>
        <label>Depreciated Bug Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Submitted to JIRA</fullName>
                </value>
                <value>
                    <fullName>Updated by Development</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bug_Server__c</fullName>
        <description>Used to determine which bug system to send the bug to</description>
        <formula>Case__r.Bug_Server__c</formula>
        <inlineHelpText>Used to determine which bug system to send the bug to</inlineHelpText>
        <label>Bug Server</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bugzilla_URL__c</fullName>
        <label>Bug URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCF_Project__c</fullName>
        <formula>TEXT(Case__r.CCF_Project__c)</formula>
        <label>CCF Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Asset_Version__c</fullName>
        <formula>IF(ISBLANK(Case__r.Reported_Version__c), Case__r.Asset.Version__c,Case__r.Reported_Version__c)</formula>
        <label>Case Asset Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Impact__c</fullName>
        <formula>TEXT(Case__r.Impact__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Impact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Last_Case_Comment__c</fullName>
        <label>Case Last Case Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Last_Public_Comment__c</fullName>
        <label>Depreciated - Case Last Public Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Open_Date__c</fullName>
        <formula>Case__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <formula>TEXT(Case__r.Priority)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Product_Category__c</fullName>
        <formula>Case__r.Product_Class_Category__r.Name</formula>
        <label>Case Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Product_Family__c</fullName>
        <formula>Case__r.Product_Class__r.Service_Product_Family__c</formula>
        <label>Case Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Product_Line__c</fullName>
        <formula>Case__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Severity__c</fullName>
        <formula>TEXT(  Case__r.Severity__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Severity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT(Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Urgency__c</fullName>
        <formula>TEXT(Case__r.Urgency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Weight__c</fullName>
        <formula>Case__r.Weighting_Overall__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Bugs</relationshipLabel>
        <relationshipName>Bugs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <formula>CONTAINS ( &quot;Completed:Resolved:Closed:Complete:CLOSED:Closed:REJECTED:Rejected:Done:DONE:Fixed&quot;, Status__c )</formula>
        <label>Closed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <formula>Case__r.Customer_Reference_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Comments__c</fullName>
        <label>Developer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EPIC_Link__c</fullName>
        <inlineHelpText>If you don&apos;t know what this is...  don&apos;t fill it in!</inlineHelpText>
        <label>EPIC Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Account__c</fullName>
        <formula>Case__r.End_User_Account__r.Name</formula>
        <label>End User Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement__c</fullName>
        <description>copy of entitlement from Case</description>
        <label>Entitlement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment_Other__c</fullName>
        <label>Environment - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>List of landmark sales environments</description>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PROD</fullName>
                </value>
                <value>
                    <fullName>Pre-Prod</fullName>
                </value>
                <value>
                    <fullName>DR</fullName>
                </value>
                <value>
                    <fullName>QAT</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>DEV</fullName>
                </value>
                <value>
                    <fullName>Staging</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Escalation_Comments__c</fullName>
        <label>Executive Escalation Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Executive_Escalation_EE__c</fullName>
        <formula>Case__r.Executive_Escalation_EE__c</formula>
        <label>Executive Escalation (EE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Validation_Comment__c</fullName>
        <description>required when changing the Field Validation picklist</description>
        <label>Field Validation Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field_Validation_Status__c</fullName>
        <label>Field Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PASSED</fullName>
                </value>
                <value>
                    <fullName>FAILED</fullName>
                </value>
                <value>
                    <fullName>Won&apos;t Validate</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fixed_Build_Number__c</fullName>
        <inlineHelpText>= implemented build version in Jira</inlineHelpText>
        <label>Fixed Build Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Version_Number__c</fullName>
        <inlineHelpText>= Implemented Version in Jira</inlineHelpText>
        <label>Fixed Version Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focus_Project__c</fullName>
        <formula>TEXT( Project__r.Focus_Project__c )</formula>
        <label>Focus Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historical_Created_By_User__c</fullName>
        <description>This is the Siebel user that created the record originally</description>
        <label>Historical Created By User</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historical_Owner__c</fullName>
        <description>This is the original bug owner from within Siebel.</description>
        <label>Historical Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historical_Siebel_Priority__c</fullName>
        <label>Historical Siebel Priority</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hosting__c</fullName>
        <label>Hosting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>On-Prem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <inlineHelpText>This defines what sort of assistance from the development team is being requested.</inlineHelpText>
        <label>Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Issue/Bug</fullName>
                    <default>true</default>
                    <label>Product Issue/Bug</label>
                </value>
                <value>
                    <fullName>Customer Escalation</fullName>
                </value>
                <value>
                    <fullName>Assistance</fullName>
                </value>
                <value>
                    <fullName>Feature Request</fullName>
                </value>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Service Request</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Customer Issue</fullName>
                </value>
                <value>
                    <fullName>Customer Question</fullName>
                </value>
                <value>
                    <fullName>Customer Enhancement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jira_Assignee__c</fullName>
        <label>Jira Assignee</label>
        <length>233</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Component_1__c</fullName>
        <description>for interface - only Salesforce</description>
        <label>Jira Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Component__c</fullName>
        <description>initial list, will grow</description>
        <inlineHelpText>Initial list, will grow.</inlineHelpText>
        <label>z - Depreciated Jira Component</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Issue</fullName>
                    <default>true</default>
                    <label>Salesforce Issue</label>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jira_Description__c</fullName>
        <inlineHelpText>This is the detailed notes of the issue to be sent to Jira.  Use of rich text mark up is not recommended here as it will not display properly in Jira.</inlineHelpText>
        <label>Jira Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jira_Issue_Type_ID__c</fullName>
        <label>Jira Issue Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Issue_Type__c</fullName>
        <description>captures incoming issue type from jira cloud</description>
        <label>Jira Issue Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Priority__c</fullName>
        <label>Jira Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Project_ID__c</fullName>
        <label>Jira Project ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Project_Name__c</fullName>
        <description>** These values are set in Flow but keep note of them here to save my sanity **

&quot;Broadcast Graphics&quot;, Versio Management, &quot;VMGMT&quot;,  11443
&quot;Editing &amp; News&quot;, Versio Ingest/Nexio Engine &quot;VINE&quot;,  11441
&quot;Servers&quot;, Versio Ingest/Nexio Engine, &quot;VINE&quot;,  11441
&quot;Versio&quot;,Versio Management,  &quot;VMGMT&quot;,  11443
&quot;SelenioFlex File&quot;, Versio Playout, &quot;VPLAY&quot;,  11440
&quot;Motion&quot;, Versio Management, &quot;VMGMT&quot;, 11443
&quot;Insight&quot;, Versio Management, &quot;VMGMT&quot;, 11443
&quot;Landmark OSI&quot;, Landmark OSI,  &quot;OSI&quot;,    11348
&quot;Landmark OSI Sales&quot;, AdConnections,  &quot;ADCON&quot;,  11444
&quot;Landmark Rights and Scheduling&quot;, SAME,  &quot;LRS&quot;,  11328
&quot;Eclipse Plus&quot;, xG Linear,  XGLT, 11232,  
&quot;xG Linear&quot;, xG Linear, &quot;XGLT&quot;,   11323
&quot;Broadcast Master&quot;, Broadcast Master, &quot;BD&quot;,  10601
&quot;xG Gameplan&quot;, &quot;XGGT&quot;,   11330
xG Scorecard, &quot;XGASC&quot;, 11325</description>
        <label>Jira Project Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AdConnections</fullName>
                </value>
                <value>
                    <fullName>BCM Development</fullName>
                </value>
                <value>
                    <fullName>Landmark Rights and Scheduling</fullName>
                </value>
                <value>
                    <fullName>Landmark OSI</fullName>
                </value>
                <value>
                    <fullName>Versio Ingest/Nexio Engine</fullName>
                </value>
                <value>
                    <fullName>Versio Management</fullName>
                </value>
                <value>
                    <fullName>Versio Playout</fullName>
                </value>
                <value>
                    <fullName>Versio System</fullName>
                </value>
                <value>
                    <fullName>xG GamePlan</fullName>
                </value>
                <value>
                    <fullName>xG Linear</fullName>
                </value>
                <value>
                    <fullName>xG Scorecard</fullName>
                </value>
                <value>
                    <fullName>xG Service Desk</fullName>
                    <isActive>false</isActive>
                    <label>xG Service Desk</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jira_Sprint__c</fullName>
        <label>Jira Sprint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Status_Summary__c</fullName>
        <description>used to capture the last jira status incoming from jira</description>
        <inlineHelpText>used to capture the last jira status incoming from jira</inlineHelpText>
        <label>Jira Status Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jira_Status__c</fullName>
        <description>Determines the status of the bug.  Deployed, In Progress and Closed can only be set by Salesforce, other statuses will be set through the Jira Interface</description>
        <inlineHelpText>Deployed, In Progress and Closed can only be set by Salesforce, other statuses will be set through the Jira Interface. Change to &quot;Deployed&quot; when deployed to the customer or &quot;Closed&quot; when its confirmed the issue</inlineHelpText>
        <label>Jira Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEPLOYED</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>CLOSED</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jira_Sync_Date__c</fullName>
        <description>Retroactive note, I believe this is what gets stamped to prompt the interface to pick up the fact there was a change and sync</description>
        <label>Jira Sync Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jira_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Facilitates an automatic sync to Jira.  Only works with hard coded Jira IDs.</description>
        <label>Jira Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jira_Team__c</fullName>
        <label>Jira Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Title__c</fullName>
        <label>Jira Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_URL__c</fullName>
        <formula>IF ( OR ( RecordType.DeveloperName = &quot;Integrated_Jira_Cloud&quot;, RecordType.DeveloperName = &quot;Integrated_Jira_Cloud_MS&quot;), 

HYPERLINK(&quot;https://imaginecommunications.atlassian.net/browse/&quot; &amp;  Bug_Number__c, Bug_Number__c),

HYPERLINK(&quot;https://jira.imaginecommunications.com/browse/&quot; &amp;  Bug_Number__c, Bug_Number__c)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jira URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landmark_Platform__c</fullName>
        <inlineHelpText>Only required for Landmark Sales Cloud products</inlineHelpText>
        <label>Landmark Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>On Prem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Jira_Comment__c</fullName>
        <label>Last Jira Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latest_JIRA_Summary__c</fullName>
        <label>Latest JIRA Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latest_SF_Comment__c</fullName>
        <description>used to facility sending comments back to jira cloud</description>
        <label>Latest SF Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latest_SF_Summary__c</fullName>
        <label>Latest SF Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Main_Jira_Issue__c</fullName>
        <description>Set with create jira flow based on decision &quot;is this a duplicate of another customer&apos;s known issue?&quot;</description>
        <inlineHelpText>This should only be used to note the &quot;master&quot; issue in the case that this bug is being created to relay a duplicate report by another customer.</inlineHelpText>
        <label>Main Jira Issue</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Attached_File_Size__c</fullName>
        <description>used with rollup helper for a warning on page layout</description>
        <inlineHelpText>used with rollup helper for a warning on page layout</inlineHelpText>
        <label>Max Attached File Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSI_Component_List__c</fullName>
        <defaultValue>&quot;Salesforce&quot;</defaultValue>
        <inlineHelpText>Used for OSI - Matches the Jira Component picklist</inlineHelpText>
        <label>OSI Component List</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party data</fullName>
                </value>
                <value>
                    <fullName>export</fullName>
                </value>
                <value>
                    <fullName>Admin Tool</fullName>
                </value>
                <value>
                    <fullName>Announcements</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Client Profile</fullName>
                </value>
                <value>
                    <fullName>Commercial Library</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Copy</fullName>
                </value>
                <value>
                    <fullName>Credit Mgmt</fullName>
                </value>
                <value>
                    <fullName>Electronic Contracting</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Internet Contracts</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Log</fullName>
                </value>
                <value>
                    <fullName>Personnel</fullName>
                </value>
                <value>
                    <fullName>Programming</fullName>
                </value>
                <value>
                    <fullName>Recon</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Sales Management</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Bug_Number__c</fullName>
        <description>This field shows the original Bug Number if the developers realized it was a duplicate and changed the Bug Number to an alternate value.</description>
        <inlineHelpText>This field shows the original Bug Number if the developers realized it was a duplicate and changed the Bug Number to an alternate value.</inlineHelpText>
        <label>Old Bug Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Code__c</fullName>
        <label>Operation Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Customer_Number__c</fullName>
        <formula>Case__r.Oracle_Customer_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peak_Case_Weight__c</fullName>
        <defaultValue>0</defaultValue>
        <description>managed with Bug After Save flow.  keeps track of the max value on case weight</description>
        <label>Peak Case Weight</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Completion__c</fullName>
        <label>Planned Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Copied from Case</description>
        <label>Product Class</label>
        <referenceTo>Product_Class__c</referenceTo>
        <relationshipLabel>Bugs</relationshipLabel>
        <relationshipName>Bugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Case__r.Project__r.Name</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Related__c</fullName>
        <formula>IF ( NOT ( ISBLANK( Case__r.Project__c  ) ),

TRUE, FALSE)</formula>
        <label>Project Related?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Bugs</relationshipLabel>
        <relationshipName>Bugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Customer_Commitment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this bug is related to a customer commitment you can enter that commitment here.</inlineHelpText>
        <label>Related Customer Commitment</label>
        <referenceTo>Customer_Commitments__c</referenceTo>
        <relationshipLabel>Bugs</relationshipLabel>
        <relationshipName>Bugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <formula>CreatedBy.Full_Name__c</formula>
        <label>Reported By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <inlineHelpText>The resolution sent from Bug system.</inlineHelpText>
        <label>Resolution</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Target_Date_Updated__c</fullName>
        <label>SLA Target Date Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_Target_Date__c</fullName>
        <description>copied from Next Milestone Target Date on Case in flow but remains editable</description>
        <label>SLA Target Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Salesforce_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>Salesforce Id</inlineHelpText>
        <label>Salesforce Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Siebel Row Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Owner__c</fullName>
        <inlineHelpText>For large projects please specify a site owner that can be contacted when R&amp;D have time critical questions.  This is generally the Project Manager but can be anyone in charge of the site.</inlineHelpText>
        <label>Site Owner</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>For Non-Integrated bugs, enter &quot;Completed&quot; when the fix is completed</inlineHelpText>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Project__c</fullName>
        <description>Used for jira integration</description>
        <inlineHelpText>Currently only a needed field for JIRA integrated bugs for the VER project.</inlineHelpText>
        <label>Versio Sub-Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AATR (Advanced Audio Track Router)</fullName>
                </value>
                <value>
                    <fullName>DATS (DataSourcerer)</fullName>
                </value>
                <value>
                    <fullName>GFX (Graphics)</fullName>
                </value>
                <value>
                    <fullName>NAV (Global Navigator)</fullName>
                </value>
                <value>
                    <fullName>NEX (Nexio Core)</fullName>
                </value>
                <value>
                    <fullName>ONYX (Automation)</fullName>
                </value>
                <value>
                    <fullName>VCM (Versio Config Manager)</fullName>
                </value>
                <value>
                    <fullName>VCP (Content Portal)</fullName>
                </value>
                <value>
                    <fullName>VED (Versio Deployment)</fullName>
                </value>
                <value>
                    <fullName>VER (Versio Core)</fullName>
                </value>
                <value>
                    <fullName>VIN (Ingest)</fullName>
                </value>
                <value>
                    <fullName>VVS (Versio Video Server)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>